# bazel_linking

./: WORKSPACE
app/: BUILD.bazel  app.go
shared_library/: BUILD.bazel  shared_library.c
