load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["app.go"],
    cdeps = [
        "//shared_library",
    ],
    cgo = True,
    #keep
    importpath = "jpowell.co.uk/app",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "app",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library_external",
    srcs = ["app.go"],
    cdeps = [
        "@shared_library_external",
    ],
    cgo = True,
    #keep
    importpath = "jpowell.co.uk/app",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "app2",
    embed = [":go_default_library_external"],
    visibility = ["//visibility:public"],
)